# 2014_Kriging

./: 2.xyz  CMakeLists.txt  filter.cc  gd.xyz  guss.ply  guss.xyz  kriging.cc
src/: BaseData.h  InputReader.cpp  InputReader.h  Interpolater.h  InverseDist copy.h  InverseDist.h  Kriging.h  Matrix.h  Numeric.h
tree/: 4 copy.cc  4.cc  PRQuadtree.h  prtree.cc  reatree.cc  show.py  test.data
